--- a/login/intercambios/templates/intercambios/nuevo_intercambio.html
+++ b/login/intercambios/templates/intercambios/nuevo_intercambio.html
@@ -21,10 +21,10 @@
 
             <label for="{{ form.articulo.id_for_label }}">{{ form.articulo.label }}</label>
             {{ form.articulo }}
-
+            <br><br>
         <button type="submit" class="btn btn-primary">Agregar</button>
         
-        <a href="{% url 'lista_todos_intercambios' %}" class="btn btn-secondary mt-3">Regresar</a>
+        <a href="{% url 'lista_todos_intercambios' %}" class="btn btn-link">Regresar</a>
     </form>
 </div>
 {% endblock %}
