--- a/login/core/templates/core/dashboard.html
+++ b/login/core/templates/core/dashboard.html
@@ -9,7 +9,7 @@
         <li class="list-group-item"><a href="{% url 'torneo_list' %}" class="btn btn-link">Torneos</a></li>
         <li class="list-group-item"><a href="{% url 'lista_todas_ventas' %}" class="btn btn-link">Ventas</a></li>
         <li class="list-group-item"><a href="{% url 'users_list' %}" class="btn btn-link">Usuarios</a></li>
-        <li class="list-group-item"><a href="{% url 'post_list' %}" class="btn btn-link">Blog</a></li>
+        <!--<li class="list-group-item"><a href="{% url 'post_list' %}" class="btn btn-link">Blog</a></li>-->
     </ul>
 </div>
 {% endblock %}
