--- a/login/torneos/templates/torneos/lista_torneos.html
+++ b/login/torneos/templates/torneos/lista_torneos.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="container-fluid">
     <h1 class="mb-4">Lista de Todos los Torneos</h1>
-    <a href="{% url 'crear_torneo' %}" class="btn btn-primary mt-3">Nuevo Torneo</a>
-    <a href="{% url 'dashboard' %}" class="btn btn-link">Regresar al dashboard</a>
+    <a href="{% url 'crear_torneo' %}" class="btn btn-primary mt-3">Nuevo Torneo</a> <br><br>
+    <!--<a href="{% url 'dashboard' %}" class="btn btn-link">Regresar al dashboard</a>-->
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
