--- a/login/ventas/templates/ventas/lista_todas_ventas.html
+++ b/login/ventas/templates/ventas/lista_todas_ventas.html
@@ -4,8 +4,8 @@
 <body class="ventas-page">
     <div class="container-fluid">
         <h1 class="mb-4">Lista de Todas las Ventas</h1>
-        <a href="{% url 'agregar_venta' %}" class="btn btn-primary mt-3">Nueva venta</a>
-        <a href="{% url 'dashboard' %}" class="btn btn-link ">Regresar al dashboard</a>
+        <a href="{% url 'agregar_venta' %}" class="btn btn-primary mt-3">Nueva venta</a> <br><br>
+        <!--<a href="{% url 'dashboard' %}" class="btn btn-link ">Regresar al dashboard</a>-->
         <div class="table-responsive">
             <table class="table table-striped table-bordered">
                 <thead class="thead-dark">
