--- a/login/core/templates/core/base.html
+++ b/login/core/templates/core/base.html
@@ -49,4 +49,13 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        document.querySelectorAll('input[type="number"], input[type="decimal"]').forEach(function(input) {
+            input.style.webkitAppearance = 'none';
+            input.style.mozAppearance = 'textfield';
+        });
+    });
+</script>
+
 </html>
