--- a/login/core/templates/core/base.html
+++ b/login/core/templates/core/base.html
@@ -32,6 +32,7 @@
                             <li class="nav-item"><a class="nav-link" href="{% url 'torneo_list' %}"> Torneos</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'lista_todas_ventas' %}"> Ventas</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'users_list' %}" > Usuarios</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'buy_list' %}" > Buylist</a></li>
                         {% endif %}
                         <!-- <li class="nav-item"><a class="nav-link" href="{% url 'post_list' %}">Blog</a></li>-->
                         <li class="nav-item"><a class="nav-link" href="{% url 'exit' %}">Salir</a></li>
